--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-calendar": "^6.0.0",
+    "react-datetime": "^3.3.1",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "web-vitals": "^2.1.4"
-  },
+  },  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -40,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   }
 }
